--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,2 @@
 REACT_APP_APIURL = https://recipeswap.onrender.com
-REACT_APP_API_ADMIN_URL = http://localhost:8080/admin
+REACT_APP_API_ADMIN_URL = https://recipeswap.onrender.com/admin
